# price-monitor

./: pyproject.toml
data/: hoggax_rates.csv  scenarios.csv
output/: finaer_2026-02-09T133400Z.jsonl  finaer_2026-02-09T133400Z.xlsx  finaer_2026-02-09T133914Z.jsonl  finaer_2026-02-09T133914Z.xlsx  finaer_2026-02-11T134920Z.xlsx  summary_simple_finaer_2026-02-09T133914Z.xlsx
scripts/: clean_compare_finaer.py  compare_finaer_vs_hoggax_borders.py  compare_prices_discount.py  fetch_hoggax_quotes.py  generate_scenarios.py  make_finaer_matrix.py  make_report.py  make_summary.py  make_summary_compare.py  make_summary_simple.py  run_pipeline_once.py
src/price_monitor/: __main__main__.py  cli.py  generate_scenarios.py  scenarios.py
src/price_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/price_monitor/clients/: finaer.py
src/price_monitor/data/: hoggax_rates.csv  hoggax_rates_long.csv  scenarios.csv
src/price_monitor/io/: excel.py  files.py
src/price_monitor/normalize/: finaer.py  hoggax.py
